@@ -295,11 +295,11 @@
             </tr>
             <tr>
                 <td><a href="configxml.html#snapshotcmbootstrapper">snapshotcmbootstrapper</a></td>
-                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/SnapshotCMBootstrapper.html">net.sourceforge.cruisecontrol.sourcecontrols.SnapshotCMBootstrapper</a></td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/bootstrappers/SnapshotCMBootstrapper.html">net.sourceforge.cruisecontrol.bootstrappers.SnapshotCMBootstrapper</a></td>
             </tr>
             <tr>
                 <td><a href="configxml.html#surroundbootstrapper">surroundbootstrapper</a></td>
-                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/SSCMBootstrapper.html">net/sourceforge/cruisecontrol/sourcecontrols/SSCMBootstrapper</a></td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/bootstrappers/SSCMBootstrapper.html">net.sourceforge.cruisecontrol.bootstrappers.SSCMBootstrapper</a></td>
             </tr>
             <tr>
                 <td><a href="configxml.html#svnbootstrapper">svnbootstrapper</a></td>
@@ -327,87 +327,87 @@
             <tbody>
             <tr>
                 <td><a href="configxml.html#alienbrain">alienbrain</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/AlienBrain.html">net.sourceforge.cruisecontrol.sourcecontrols.AlienBrain</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/AlienBrain.html">net.sourceforge.cruisecontrol.sourcecontrols.AlienBrain</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#alwaysbuild">alwaysbuild</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/AlwaysBuild.html">net.sourceforge.cruisecontrol.sourcecontrols.AlwaysBuild</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/AlwaysBuild.html">net.sourceforge.cruisecontrol.sourcecontrols.AlwaysBuild</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#buildstatus">buildstatus</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/BuildStatus.html">net.sourceforge.cruisecontrol.sourcecontrols.BuildStatus</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/BuildStatus.html">net.sourceforge.cruisecontrol.sourcecontrols.BuildStatus</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#clearcase">clearcase</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/ClearCase.html">net.sourceforge.cruisecontrol.sourcecontrols.ClearCase</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/ClearCase.html">net.sourceforge.cruisecontrol.sourcecontrols.ClearCase</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#cmsynergy">cmsynergy</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/CMSynergy.html">net.sourceforge.cruisecontrol.sourcecontrols.CMSynergy</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/CMSynergy.html">net.sourceforge.cruisecontrol.sourcecontrols.CMSynergy</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#compound">compound</a></td>
-                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols.Compound.html">net.sourceforge.cruisecontrol.sourcecontrols.Compound</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/Compound.html">net.sourceforge.cruisecontrol.sourcecontrols.Compound</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#cvs">cvs</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/CVS.html">net.sourceforge.cruisecontrol.sourcecontrols/CVS</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/ConcurrentVersionsSystem.html">net.sourceforge.cruisecontrol.sourcecontrols.ConcurrentVersionsSystem</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#filesystem">filesystem</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/FileSystem.html">net.sourceforge.cruisecontrol.sourcecontrols.FileSystem</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/FileSystem.html">net.sourceforge.cruisecontrol.sourcecontrols.FileSystem</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#forceonly">forceonly</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/ForceOnly.html">net.sourceforge.cruisecontrol.sourcecontrols.ForceOnly</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/ForceOnly.html">net.sourceforge.cruisecontrol.sourcecontrols.ForceOnly</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#httpfile">httpfile</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/HttpFile.html">net.sourceforge.cruisecontrol.sourcecontrols.HttpFile</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/HttpFile.html">net.sourceforge.cruisecontrol.sourcecontrols.HttpFile</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#mavensnapshotdependency">mavensnapshotdependency</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/MavenSnapshotDependency.html">net.sourceforge.cruisecontrol.sourcecontrols.MavenSnapshotDependency</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/MavenSnapshotDependency.html">net.sourceforge.cruisecontrol.sourcecontrols.MavenSnapshotDependency</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#mks">mks</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/MKS.html">net.sourceforge.cruisecontrol.sourcecontrols.MKS</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/MKS.html">net.sourceforge.cruisecontrol.sourcecontrols.MKS</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#p4">p4</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/P4.html">net.sourceforge.cruisecontrol.sourcecontrols.P4</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/P4.html">net.sourceforge.cruisecontrol.sourcecontrols.P4</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#pvcs">pvcs</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/PVCS.html">net.sourceforge.cruisecontrol.sourcecontrols.PVCS</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/PVCS.html">net.sourceforge.cruisecontrol.sourcecontrols.PVCS</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#snapshotcm">snapshotcm</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/SnapshotCM.html">net.sourceforge.cruisecontrol.sourcecontrols.SnapshotCM</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/SnapshotCM.html">net.sourceforge.cruisecontrol.sourcecontrols.SnapshotCM</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#starteam">starteam</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/StarTeam.html">net.sourceforge.cruisecontrol.sourcecontrols.StarTeam</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/StarTeam.html">net.sourceforge.cruisecontrol.sourcecontrols.StarTeam</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#surround">surround</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/SSCM.html">net.sourceforge.cruisecontrol.sourcecontrols.SSCM</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/SSCM.html">net.sourceforge.cruisecontrol.sourcecontrols.SSCM</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#svn">svn</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/SVN.html">net.sourceforge.cruisecontrol.sourcecontrols.SVN</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/SVN.html">net.sourceforge.cruisecontrol.sourcecontrols.SVN</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#timebuild">timebuild</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/TimeBuild.html">net.sourceforge.cruisecontrol.sourcecontrols.TimeBuild</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/TimeBuild.html">net.sourceforge.cruisecontrol.sourcecontrols.TimeBuild</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#vss">vss</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/Vss.html">net.sourceforge.cruisecontrol.sourcecontrols.Vss</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/Vss.html">net.sourceforge.cruisecontrol.sourcecontrols.Vss</td>
             </tr>
             <tr>
                 <td><a href="configxml.html#vssjournal">vssjournal</a></td>
-                <td><a class="javadoc" href="net.sourceforge.cruisecontrol.sourcecontrols/VssJournal.html">net.sourceforge.cruisecontrol.sourcecontrols.VssJournal</td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/sourcecontrols/VssJournal.html">net.sourceforge.cruisecontrol.sourcecontrols.VssJournal</td>
             </tr>
             </tbody>
         </table>
@@ -435,7 +435,7 @@
             </tr>
             <tr>
                 <td><a href="configxml.html#pause">pause</a></td>
-                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/builders/PauseBuilder.html">net.sourceforge.cruisecontrol.builders.PauseBuilder</a></td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/PauseBuilder.html">net.sourceforge.cruisecontrol.PauseBuilder</a></td>
             </tr>
             </tbody>
         </table>
@@ -522,8 +522,8 @@
                 <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/publishers/SocketPublisher.html">net.sourceforge.cruisecontrol.publishers.SocketPublisher</a></td>
             </tr>
             <tr>
-                <td><a href="configxml.html#weblogpublisher">weblogpublisher</a></td>
-                <td>a class="javadoc" href="api/net/sourceforge/cruisecontrol/publishers/WeblogPublisher.html">net.sourceforge.cruisecontrol.publishers.WeblogPublisher</a></td>
+                <td><a href="configxml.html#weblogpublisher">weblog</a></td>
+                <td><a class="javadoc" href="api/net/sourceforge/cruisecontrol/publishers/WeblogPublisher.html">net.sourceforge.cruisecontrol.publishers.WeblogPublisher</a></td>
             </tr>
             <tr>
                 <td><a href="configxml.html#x10">x10</a></td>
